--- a/.github/workflows/butler-publish.yml
+++ b/.github/workflows/butler-publish.yml
@@ -15,9 +15,9 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: 18
       - run: npm install
-      - run: npm build
+      - run: npm run build
 
   publish-npm:
     needs: build
