revert job name change

--- a/.github/workflows/butler-publish.yml
+++ b/.github/workflows/butler-publish.yml
@@ -18,7 +18,7 @@ jobs:
           node-version: 18
       - run: npm install
 
-  publish-itchio:
+  publish-npm:
     needs: build
     runs-on: ubuntu-latest
     steps:
