--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -16,7 +16,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 16
-      - run: npm install
+      - run: npm ci
 
   publish-npm:
     needs: build
@@ -27,7 +27,7 @@ jobs:
         with:
           node-version: 16
           registry-url: https://registry.npmjs.org/
-      - run: npm install
-      - run: npm publish --access=public
+      - run: npm ci
+      - run: npm publish --access=${{vars.ACCESS_LEVEL}}
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
