--- a/.github/workflows/butler-publish.yml
+++ b/.github/workflows/butler-publish.yml
@@ -17,6 +17,7 @@ jobs:
         with:
           node-version: 18
       - run: npm ci
+      - run: npm test
 
   publish-itchio:
     needs: build
