--- a/.github/workflows/butler-publish.yml
+++ b/.github/workflows/butler-publish.yml
@@ -29,10 +29,7 @@ jobs:
           node-version: 18
       - run: npm ci
       - run: npm run build
-      - run: |
-          echo 'PACKAGE_JSON<<EOF' >> $GITHUB_ENV
-          cat ./package.json >> $GITHUB_ENV
-          echo 'EOF' >> $GITHUB_ENV
+      - run: echo "VERSION=$(jq '.version' ./package.json)" >> $GITHUB_ENV
       - name: Butler Push
         uses: yeslayla/butler-publish-itchio-action@v1.0.3
         env:
@@ -40,5 +37,5 @@ jobs:
           CHANNEL: ${{ vars.BUTLER_CHANNEL }}
           ITCH_GAME: ${{ vars.ITCH_GAME }}
           ITCH_USER: ${{ vars.ITCH_USER }}
-          PACKAGE: dist/${{ github.event.repository.name }}-${{ fromJson(env.PACKAGE_JSON).version }}.lcp
-          VERSION: ${{ fromJson(env.PACKAGE_JSON).version }}
+          PACKAGE: dist/${{ github.event.repository.name }}-${{ env.VERSION }}.lcp
+          VERSION: ${{ env.VERSION }}
