--- a/.github/workflows/bump-version-tag.yml
+++ b/.github/workflows/bump-version-tag.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           node-version: 18
           registry-url: https://registry.npmjs.org/
-      - run: npm version patch
+      - run: npm version patch --git-tag-version=false
       - run: echo VERSION=$(jq -j '.version' ./package.json) >> $GITHUB_ENV
       - name: Update LCP Manifest
         run: |
