--- a/.github/workflows/bump-version-tag.yml
+++ b/.github/workflows/bump-version-tag.yml
@@ -24,5 +24,6 @@ jobs:
       - name: Add & Commit
         uses: EndBug/add-and-commit@v9.1.3
         with:
+          default_author: github_actions
           message: "bump to ${{ env.VERSION }}"
           tag: ${{ env.VERSION }} -a -m "Release version ${{ env.VERSION }}"
