--- a/.github/workflows/bump-version-caller.yml
+++ b/.github/workflows/bump-version-caller.yml
@@ -7,5 +7,5 @@ on:
 
 jobs:
   call-bump-version-tag:
-    uses: msprijatelj/lcp-package-test/.github/workflows/bump-version-tag.yml
+    uses: msprijatelj/lcp-package-test/.github/workflows/bump-version-tag.yml@main
 
