--- a/.github/workflows/bump-version-caller.yml
+++ b/.github/workflows/bump-version-caller.yml
@@ -1,6 +1,6 @@
 # This workflow calls an org-level reusable workflow for incrementing LCP and NPM package versions.
 
-name: Bump Version & Tag
+name: LCP Version Bump
 
 on:
   workflow_dispatch:
