update workflow_call, point temp at local workflow

--- a/.github/workflows/bump-version-caller.yml
+++ b/.github/workflows/bump-version-caller.yml
@@ -17,7 +17,7 @@ on:
 
 jobs:
   call-bump-version-tag:
-    uses: massif-press/.github/.github/workflows/bump-version-tag.yml@master
+    uses: msprijatelj/lcp-package-test/.github/workflows/bump-version-tag.yml@main
     with:
       version_level: ${{ inputs.version_level }}
 
